# sperren-map

./: .gitignore  .replit  Test_addresses.json  addresses.json  create_test_excel.py  debug_map.html  diagnose.py  diagnose_Wahlert_Wuppertal.html  find_best_street_geometry.py  geocode_cache.json  main.py  map_10_April_2026.html  map_10_Dezember_2025.html  map_10_Februar_2026.html  map_10_Juni_2026.html  map_10_März_2026.html  map_11_Dezember_2025.html  map_11_Februar_2026.html  map_11_Juni_2026.html  map_11_März_2026.html  map_12_April_2026.html  map_12_Februar_2026.html  map_12_Juli_2026.html  map_12_März_2026.html  map_12_November_2025.html  map_13_April_2026.html  map_13_Juli_2026.html  map_13_November_2025.html  map_14_April_2026.html  map_14_Dezember_2025.html  map_14_Juli_2026.html  map_14_Juni_2026.html  map_14_November_2025.html  map_15_April_2026.html  map_15_Dezember_2025.html  map_15_Februar_2026.html  map_15_Juli_2026.html  map_15_Juni_2026.html  map_15_März_2026.html  map_16_April_2026.html  (+130 more)
attached_assets/: 2_1761490795369.xlsx  last3_1761490511368.py
map_debug/: geocode_results.jsonl  overpass_results.json
