[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Парсер AWG Wuppertal со свалками и картой"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-telegram-bot>=22.5",
    "tqdm>=4.67.1",
    "folium>=0.17.0",
    "geopy>=2.4.1",
]
